# libra

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.rs  install.sh
.github/workflows/: base.yml  release.yml
benchmark/: README.md  run.sh
benchmark/test/: test-runner.sh
docs/: code-of-conduct.md  error-codes.md  installation.md  installation.zh-CN.md
docs/commands/: README.md  add.md  agent.md  alternates.md  am.md  apply.md  archive.md  auth.md  bisect.md  blame.md  branch.md  bundle.md  cache.md  cat-file.md  check-attr.md  check-ignore.md  check-mailmap.md  checkout.md  cherry-pick.md  clean.md  clone.md  cloud.md  code.md  commit-tree.md  commit.md  completions.md  config.md  credential.md  deps.md  describe.md  diff-files.md  diff-index.md  diff-tree.md  diff.md  dirty.md  fast-export.md  fast-import.md  fetch.md  file.md  for-each-ref.md  (+60 more)
docs/development/: account.md  cli-error-contract-design.md  link-subtree-composition-rfc.md  telemetry-otlp.md
sql/migrations/: 2026053101_ai_final_decision.sql  2026062301_rename_agent_traces_branch.sql  2026070201_metadata_kv.sql  2026070201_metadata_kv_down.sql  2026070202_working_dirty.sql  2026070202_working_dirty_down.sql  2026070301_revision_ordinal.sql  2026070301_revision_ordinal_down.sql  2026070401_sequence_state.sql  2026070401_sequence_state_down.sql  2026070501_layer.sql  2026070501_layer_down.sql  2026070601_object_obliteration.sql  2026070601_object_obliteration_down.sql  2026070701_sparse_view.sql  2026070701_sparse_view_down.sql  2026070801_worktree_isolation.sql  2026070801_worktree_isolation_down.sql  2026070802_agent_checkpoint_paging.sql  2026070802_agent_checkpoint_paging_down.sql  2026070803_agent_audit_log.sql  2026070803_agent_audit_log_down.sql  2026071301_agent_coverage_gate.sql  2026071301_agent_coverage_gate_down.sql  2026071401_agent_export_job.sql  2026071401_agent_export_job_down.sql  2026071402_agent_import_identity.sql  2026071402_agent_import_identity_down.sql  2026071403_agent_import_tombstone.sql  2026071403_agent_import_tombstone_down.sql  README.md
src/: cli.rs  lib.rs  main.rs
src/command/: account.rs  add.rs  alternates.rs  am.rs  apply.rs  archive.rs  auth.rs  bisect.rs  blame.rs  branch.rs  bundle.rs  cache.rs  cat_file.rs  check_attr.rs  check_ignore.rs  check_mailmap.rs  checkout.rs  cherry_pick.rs  clone.rs  cloud.rs  code.rs  commit.rs  commit_tree.rs  completions.rs  config.rs  credential.rs  deps.rs  describe.rs  describe_tests.rs  describe_types.rs  diff.rs  diff_plumbing.rs  dirty.rs  editor.rs  fast_export.rs  fast_import.rs  fetch.rs  file.rs  for_each_ref.rs  format_patch.rs  (+74 more)
src/internal/: account.rs  auth.rs  branch.rs  config.rs  db.rs  dirty.rs  head.rs  merge_base.rs  metadata.rs  mod.rs  notes.rs  pack_writer.rs  reflog.rs  repo_hooks.rs  revision_ordinal.rs  tree_plumbing.rs  vault.rs
src/utils/: atomic_stream.rs  atomic_write.rs  attributes.rs  backoff.rs  client_storage.rs  convert.rs  d1_client.rs  error.rs  ignore.rs  lfs.rs  log_config.rs  mod.rs  object.rs  output.rs  path.rs  path_case.rs  preview_object.rs  preview_scratch.rs  read_policy.rs  redact.rs  resource_limits.rs  telemetry.rs  test.rs  text.rs  thin_pack.rs  tree_attributes.rs  util.rs
template/skills/: libra.md
tests/: INDEX.md  agent_audit_log_test.rs  agent_capture_migration_test.rs  agent_checkpoint_export_test.rs  agent_checkpoint_reader_test.rs  agent_checkpoint_redaction_test.rs  agent_checkpoint_span_test.rs  agent_clean_span_test.rs  agent_cloud_tombstone_test.rs  agent_coverage_gate_test.rs  agent_doctor_repair_test.rs  agent_enable_install_path_test.rs  agent_hook_crash_test.rs  agent_hook_span_test.rs  agent_investigate_span_test.rs  agent_investigate_workflow_test.rs  agent_lifecycle_event_test.rs  agent_live_gate_test.rs  agent_local_capture_smoke_test.rs  agent_opencode_bridge_test.rs  agent_review_span_test.rs  agent_review_workflow_test.rs  agent_rpc_external_test.rs  agent_rpc_span_test.rs  agent_transcript_intelligence_test.rs  ai_code_ui_headless_test.rs  ai_libra_vcs_safety_test.rs  ai_provider_transform_test.rs  ai_semantic_tools_test.rs  ai_subagent_flag_off_regression_test.rs  auth_keyring_backend.rs  cloud_storage_backup_test.rs  code_cli_dispatch_test.rs  code_codex_default_tui_test.rs  code_mcp_dual_entry_test.rs  db_migration_test.rs  media_fastcdc_test.rs  network_remotes_test.rs  operation_wrapper_test.rs  otlp_telemetry.rs  (+3 more)
tests/command/: add_test.rs  agent_checkpoint_export_test.rs  agent_checkpoint_test.rs  agent_clean_test.rs  agent_erasure_test.rs  agent_fix_bridge_test.rs  agent_push_test.rs  agent_roster_test.rs  agent_rpc_trust_test.rs  agent_run_admission_test.rs  agent_skill_search_test.rs  alternates_test.rs  apply_test.rs  archive_test.rs  auth_test.rs  bisect_test.rs  blame_test.rs  branch_diff_test.rs  branch_reset_test.rs  branch_test.rs  bundle_test.rs  cache_test.rs  case_handling_test.rs  cat_file_test.rs  check_attr_test.rs  check_ignore_test.rs  check_mailmap_test.rs  checkout_test.rs  cherry_pick_test.rs  clean_test.rs  cli_error_test.rs  clone_cli_test.rs  clone_test.rs  commit_autosquash_test.rs  commit_editor_test.rs  commit_test.rs  commit_tree_test.rs  completions_test.rs  config_test.rs  credential_test.rs  (+69 more)
tests/compat/: README.md  agent_architecture_guard.rs  agent_capability_matrix_pin.rs  agent_docs_contract.rs  broken_pipe_output_test.rs  checkout_branch_startpoint_test.rs  clone_shallow_integrity_test.rs  commit_amend_no_edit_test.rs  commit_identity_date_test.rs  compat_status_wave0_register.rs  config_defaults_commit_status.rs  config_defaults_commit_status_auto_stage_limits.rs  config_defaults_commit_status_failures.rs  config_defaults_commit_status_io.rs  config_defaults_commit_status_limits.rs  config_defaults_commit_status_recovery.rs  config_defaults_commit_status_side_effects.rs  config_defaults_commit_status_verbose.rs  config_defaults_diff.rs  config_defaults_diff_prefix.rs  config_defaults_diff_prefix_edges.rs  (+43 more)
web/: package.json
worker/: package.json
(+436 files in other folders)
