[package]
name = "libra"
version = "0.18.39"
edition = "2024"
license = "MIT"
description = "AI agent-native version control system with Git on-disk compatibility, SQLite-backed metadata, and tiered cloud storage"
repository = "https://github.com/libra-tools/libra"
homepage = "https://github.com/libra-tools/libra"
authors = ["Libra Tools"]
keywords = ["git", "version-control", "ai", "agent", "vcs"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[features]
default        = []
worktree-fuse  = []   # Unix FUSE-backed worktree commands (optional)
test-network   = []   # L2: tests requiring outbound network but no secrets
test-live-ai   = []   # L3: tests calling real LLM APIs
test-live-cloud = []  # L3: tests hitting real D1/R2 endpoints
test-provider  = []   # deterministic hidden provider for local TUI automation tests
fastcdc        = []   # lore.md §6: default-OFF FastCDC LFS media chunking client substrate (no new deps; reuses ring sha256; server protocol frozen)
subagent-scaffold = []  # CEX-S2-10 schema-only scaffold (Step 2 sub-agent contracts; gated on CP-4 in production — see docs/development/tracing/agent.md "Step 2 audit closure")
otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]  # lore.md 1.7: OTLP trace export (default binary unaffected)
keyring = ["dep:keyring"]  # lore.md 2.7: OS-keyring auth backend (release builds enable it; default dev builds unaffected)

[dependencies]
uuid = { version = "1.23.1", features = ["v4", "v5", "v7"] }
git-internal = "0.8.3"
anyhow = "1.0.102"
byte-unit = "5.2.0"
byteorder = "1.5.0"
bytes = "1.11.1"
object_store = { version = "0.13.2", features = ["aws", "azure", "gcp", "http"] }
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.6"
colored = "3.1.1"
fastrand = "2.3.0"
flate2 = "1.1.9"  # add features = ["zlib"] if slow
tar = "0.4"
zip = "0.6"
bzip2 = "0.6"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
http = "1.4.0"
ignore = "0.4.25"
indicatif = "0.18.4"
lazy_static = "1.5.0"
lru-mem = "0.3.0"
once_cell = "1.21.4"
openssl = { version = "0.10.78", features = ["vendored"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
    "stream",
    "json",
    "query",
    "rustls"
]}
ring = "0.17.14"
rpassword = "7.4.0"
scopeguard = "1.2.0"
sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = [
    "io-util",
    "net",
    "rt-multi-thread",
    "rt",
    "macros",
    "process",
    "sync",
    "time"
]}
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.3"
url = "2.5.8"
walkdir = "2.5.0"
wax = "0.7.0"
diffs = "0.5.1"
similar = "2.7.0"
path-absolutize = "3.1.1"
infer = "0.19.0"
pathdiff = "0.2.3"
crc32fast = "1.5.0"
dirs = "6.0.0"
dagrs = "0.8.1"
rig-core = { version = "0.35.0", default-features = false, features = ["rmcp", "reqwest", "rustls"] }
rmcp = { version = "1.5.0", features = [
    "macros",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-io"
] }
hyper-util = { version = "0.1.20", features = ["full"] }
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
rust-embed = { version = "8.11.0", features = ["mime-guess", "include-exclude"] }
mime_guess = "2.0.5"
tempfile = "3.27.0"

# TUI
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["bracketed-paste", "event-stream"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
async-stream = "0.3.6"
futures-core = "0.3.32"

# Diff parsing
diffy = "0.4.2"
shlex = "1.3.0"
tree-sitter = "0.26.8"
tree-sitter-bash = "0.25"
tree-sitter-rust = "0.24"

# Markdown rendering
pulldown-cmark = "0.13.3"

# Unicode handling
unicode-width = "0.2.2"
libvault = { version = "0.2.2", features = ["storage_sqlite"] }
base64 = "0.22.1"

# OTLP telemetry (lore.md 1.7) — optional, compiled only with `--features otlp`;
# http-proto + blocking reqwest + rustls (no tonic: init/flush run on the
# runtime-free main thread; see docs/development/telemetry-otlp.md)
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", optional = true }
opentelemetry-otlp = { version = "0.32.0", optional = true, default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
tracing-opentelemetry = { version = "0.33.0", optional = true }

# OS-keyring auth backend (lore.md 2.7) — optional; Linux uses the sync
# secret-service transport with VENDORED libdbus (static, no runtime dylib
# dependency on end-user machines); macOS/Windows use native stores.
keyring = { version = "3", optional = true, default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }

[target.'cfg(unix)'.dependencies] # only on Unix
libfuse-fs = "0.1.13"
pager = "0.16.1"
libc = "0.2"
rfuse3 = { version = "0.0.8", features = ["tokio-runtime", "unprivileged"] }

[target.'cfg(target_os = "linux")'.dependencies] # Linux-only seccomp BPF compiler
seccompiler = { version = "0.5.0", features = ["json"] }

[dev-dependencies]
serial_test = { version = "3.4.0", default-features = false, features = ["async"] }
tokio = { version = "1.52.1", features = [
    "io-util",
    "net",
    "rt-multi-thread",
    "rt",
    "macros",
    "process",
    "sync",
    "time"
]}
testcontainers = { version = "0.27.3", features = [
    "http_wait",
    "reusable-containers",
] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "query", "rustls"] }
assert_cmd = "2.2.1"
pgp = "0.19.0"
gag = "1.0.0"
portable-pty = "0.9.0"
# AST-level use-tree/path walking for tests/compat/agent_architecture_guard.rs
# (syn 2.x is already in the dependency graph via derive macros).
syn = { version = "2.0", features = ["full", "visit"] }

# Compatibility-surface integration tests live under tests/compat/. Cargo's
# default test discovery only picks up *.rs directly under tests/, so each
# compat surface file must be registered here.
[[test]]
name = "compat_stash_subcommand_surface"
path = "tests/compat/stash_subcommand_surface.rs"

[[test]]
name = "compat_pull_strategy_flags_surface"
path = "tests/compat/pull_strategy_flags_surface.rs"

[[test]]
name = "compat_bisect_subcommand_surface"
path = "tests/compat/bisect_subcommand_surface.rs"

[[test]]
name = "compat_worktree_delete_dir"
path = "tests/compat/worktree_delete_dir.rs"

[[test]]
name = "compat_checkout_alias_help"
path = "tests/compat/checkout_alias_help.rs"

[[test]]
name = "compat_matrix_alignment"
path = "tests/compat/matrix_alignment.rs"

[[test]]
name = "compat_live_compat_workflow"
path = "tests/compat/live_compat_workflow.rs"

[[test]]
name = "compat_branch_lossy_wrapper_guard"
path = "tests/compat/branch_lossy_wrapper_guard.rs"

[[test]]
name = "compat_lfs_client_production_unwrap_guard"
path = "tests/compat/lfs_client_production_unwrap_guard.rs"

[[test]]
name = "compat_config_production_unwrap_guard"
path = "tests/compat/config_production_unwrap_guard.rs"

[[test]]
name = "compat_head_production_unwrap_guard"
path = "tests/compat/head_production_unwrap_guard.rs"

[[test]]
name = "compat_util_production_unwrap_guard"
path = "tests/compat/util_production_unwrap_guard.rs"

[[test]]
name = "compat_client_storage_production_unwrap_guard"
path = "tests/compat/client_storage_production_unwrap_guard.rs"

[[test]]
name = "compat_extra_production_unwrap_guard"
path = "tests/compat/extra_production_unwrap_guard.rs"

[[test]]
name = "compat_all_production_unwrap_guard"
path = "tests/compat/all_production_unwrap_guard.rs"

[[test]]
name = "compat_agent_run_non_exhaustive_guard"
path = "tests/compat/agent_run_non_exhaustive_guard.rs"

[[test]]
name = "compat_agent_docs_contract"
path = "tests/compat/agent_docs_contract.rs"

[[test]]
name = "compat_help_examples_banner"
path = "tests/compat/help_examples_banner.rs"

[[test]]
name = "compat_error_codes_doc_sync"
path = "tests/compat/error_codes_doc_sync.rs"

[[test]]
name = "compat_command_docs_examples_section"
path = "tests/compat/command_docs_examples_section.rs"

[[test]]
name = "compat_help_flag_descriptions"
path = "tests/compat/help_flag_descriptions.rs"

[[test]]
name = "compat_help_no_impl_meta_leak"
path = "tests/compat/help_no_impl_meta_leak.rs"

[[test]]
name = "compat_format_patch_flag_surface"
path = "tests/compat/format_patch_flag_surface.rs"

[[test]]
name = "compat_otlp_feature_gate_guard"
path = "tests/compat/otlp_feature_gate_guard.rs"

[[test]]
name = "compat_fastcdc_feature_gate_guard"
path = "tests/compat/fastcdc_feature_gate_guard.rs"

[[test]]
name = "compat_keyring_feature_gate_guard"
path = "tests/compat/keyring_feature_gate_guard.rs"

[[test]]
name = "compat_agent_capability_matrix_pin"
path = "tests/compat/agent_capability_matrix_pin.rs"

[[test]]
name = "compat_agent_architecture_guard"
path = "tests/compat/agent_architecture_guard.rs"

[[test]]
name = "compat_subface_labels"
path = "tests/compat/subface_labels.rs"

[[test]]
name = "compat_conflict_status_diff"
path = "tests/compat/conflict_status_diff_test.rs"

[[test]]
name = "compat_diff_check_safety"
path = "tests/compat/diff_check_safety_test.rs"

[[test]]
name = "compat_clone_shallow_integrity"
path = "tests/compat/clone_shallow_integrity_test.rs"

[[test]]
name = "compat_checkout_branch_startpoint"
path = "tests/compat/checkout_branch_startpoint_test.rs"

[[test]]
name = "compat_switch_orphan_root"
path = "tests/compat/switch_orphan_root_test.rs"

# OTLP integration tests need the feature (excluded from `cargo test --all`
# under default features via required-features).
[[test]]
name = "otlp_telemetry"
path = "tests/otlp_telemetry.rs"
required-features = ["otlp"]

[[test]]
name = "auth_keyring_backend"
path = "tests/auth_keyring_backend.rs"
required-features = ["keyring"]

# Live LLM-provider tests (L3): call real APIs when their key/opt-in env is
# set. Per the L3 convention (CLAUDE.md: match the env gate AND the
# `test-live-ai` feature), require the feature so a bare `cargo test --all`
# excludes them — a machine with DEEPSEEK_API_KEY / LIBRA_AI_LIVE_OLLAMA set
# can no longer hit live providers in default L1 (C3, codex review).
[[test]]
name = "ai_agent_test"
path = "tests/ai_agent_test.rs"
required-features = ["test-live-ai"]

[[test]]
name = "ai_chat_agent_test"
path = "tests/ai_chat_agent_test.rs"
required-features = ["test-live-ai"]

[[test]]
name = "ai_ollama_live_gate_test"
path = "tests/ai_ollama_live_gate_test.rs"
required-features = ["test-live-ai"]
